vlib/v/checker/tests/invalid_mut.vv
fn main() {
	mut x := 0
	if mut x == 0 {
		println(true)
	}
	if 0 == mut x {
		println(true)
	}
	_ = x
}
